# ResNav

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  batch_evaluation.py  batch_evaluation_v2.py  environment.yml  export_to_latex.py  inference_demo.py  pyproject.toml  requirements.txt  statistical_analysis.py  train_demo.py
amr_env/: __init__.py  reward.py
analysis/: analyze_pallet_placement_bug.py  analyze_seed_usage.py  compare_path_checks.py  comprehensive_seed_analysis.py  debug_seed_20021213.py  debug_seed_20021213_detailed.py  deep_analysis_seed_20021213.py  improved_pathfinding.py  improved_scenario_generator.py  inspect_seed.py  scenario_prefilter.py  test_retry_behavior.py  test_seed_20021213_fix.py
configs/: config.yaml  ppo_default.yaml  ppo_v1_train.yaml
control/: __init__.py  dwa_baseline.py  pure_pursuit.py  residual_controller.py
docs/: ARCHITECTURE.md  USAGE.md  map_fix.md  streamlining_plan.md
eval/: __init__.py  benchmark.py  compare_baselines.py  metrics.py  plots.py
me5418_nav/: __init__.py  config.py  constants.py  observation.py  types.py
policy/: __init__.py  networks.py  sb3_policies.py
scripts/: baseline_eval.py  blockage_demo.py  check_reachability.py  eval.py  eval_blockage_ppo.py  manual_control.py  random_agent.py  record_episode.py  train.py  train_blockage_ppo.py
tests/: test_dwa_allows_reverse.py  test_dynamic_overlay.py  test_dynamics.py  test_edt.py  test_env_dynamic_collision.py  test_env_reverse_clip.py  test_env_smoke.py  test_inflate.py  test_lidar.py  test_mover_dynamics.py  test_obs_shape.py  (+8 more)
(+112 files in other folders)
