[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amr-nav"
version = "0.1.0"
description = "AMR residual navigation for ME5418"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["amr_env*", "training*", "tools*"]
